--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <!-- Clue 1 -->
         <h2>Clue 1</h2>
-        <p>A clue awaits you where this fat lady sleeps at night</p>
+        <p>A clue awaits you in this place that is filled six days a week and can only be opened if you own it.</p>
 
         <!-- Clue 2 -->
         <h2>Clue 2</h2>
@@ -44,12 +44,12 @@
 
   <!-- Final Clue -->
   <h2>Final Clue</h2>
-  <p>There are 12 days of Christmas. One pair of them that match will give you the answer you seek!</p>
+  <p>There are 8 of these under the tree. One is wrapped especially well and will give you the answer you seek!</p>
 </main>
 
     <!-- Footer Element -->
     <footer>
-        <p>MERRY CHRISTMAS NERD . &copy; Madeline</p>
+        <p>MERRY CHRISTMAS NERD. NO CHEATING . &copy; Madeline</p>
     </footer>
 
 </body>
